--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,39 +4,81 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.huangzj.kotlindemo.ui.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        app:layout_constraintEnd_toStartOf="@+id/sw_btn"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="点我开始倒计时"/>
-
-    <Switch
-        android:id="@+id/sw_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:textColor="@color/colorPrimary"
-        android:textOff="关"
-        android:textOn="开"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    <FrameLayout
+        android:id="@+id/fl_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv"/>
+        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_weight="1"/>
 
+    <com.zenchn.support.widget.bottomnavigationbar.BottomBarLayout
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fl_container">
+
+        <com.zenchn.support.widget.bottomnavigationbar.BottomBarItem
+            android:id="@+id/navigation_home"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:iconHeight="18dp"
+            app:iconNormal="@drawable/ic_home_normal"
+            app:iconSelected="@drawable/ic_home_selected"
+            app:iconWidth="18dp"
+            app:itemMarginTop="0dp"
+            app:itemText="@string/title_home"
+            app:itemTextSize="13sp"
+            app:textColorNormal="@color/ios_darker_gray"
+            app:textColorSelected="@color/black"/>
+
+        <com.zenchn.support.widget.bottomnavigationbar.BottomBarItem
+            android:id="@+id/navigation_discovery"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:iconHeight="18dp"
+            app:iconNormal="@drawable/ic_discovery_normal"
+            app:iconSelected="@drawable/ic_discovery_selected"
+            app:iconWidth="18dp"
+            app:itemMarginTop="0dp"
+            app:itemText="@string/title_discovery"
+            app:itemTextSize="13sp"
+            app:textColorNormal="@color/ios_darker_gray"
+            app:textColorSelected="@color/black"/>
+
+        <com.zenchn.support.widget.bottomnavigationbar.BottomBarItem
+            android:id="@+id/navigation_hot"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:iconHeight="18dp"
+            app:iconNormal="@drawable/ic_hot_normal"
+            app:iconSelected="@drawable/ic_hot_selected"
+            app:iconWidth="18dp"
+            app:itemMarginTop="0dp"
+            app:itemText="@string/title_hot"
+            app:itemTextSize="13sp"
+            app:textColorNormal="@color/ios_darker_gray"
+            app:textColorSelected="@color/black"/>
+
+        <com.zenchn.support.widget.bottomnavigationbar.BottomBarItem
+            android:id="@+id/navigation_mine"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:iconHeight="18dp"
+            app:iconNormal="@drawable/ic_mine_normal"
+            app:iconSelected="@drawable/ic_mine_selected"
+            app:iconWidth="18dp"
+            app:itemMarginTop="0dp"
+            app:itemText="@string/title_mine"
+            app:itemTextSize="13sp"
+            app:textColorNormal="@color/ios_darker_gray"
+            app:textColorSelected="@color/black"/>
+    </com.zenchn.support.widget.bottomnavigationbar.BottomBarLayout>
 </android.support.constraint.ConstraintLayout>
