--- a/app/src/main/res/layout/recycle_header_home.xml
+++ b/app/src/main/res/layout/recycle_header_home.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.youth.banner.Banner
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/banner_home"
     android:layout_width="match_parent"
-    android:layout_height="160dp"/>
+    android:layout_height="160dp"
+    app:banner_default_image="@drawable/placeholder_banner"
+    app:title_background="@color/color_44aaaaaa"
+    app:title_height="30dp"
+    app:title_textcolor="@color/color_title_bg"
+    app:title_textsize="16sp"/>
