--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,25 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="KotlinDemoAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="KotlinDemoAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="KotlinDemoAppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
+    <style name="SplashFullScreen" parent="KotlinDemoAppTheme">
         <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="KotlinDemoAppTheme.NoActionBar.FullScreen">
-        <item name="android:windowFullscreen">true</item>
-    </style>
+    <!--CircleImageView-->
+    <declare-styleable name="CircleImageView">
+        <attr name="type"/>
+        <attr name="borderColor"/>
+        <attr name="borderWidth"/>
+        <attr name="rectRoundRadius"/>
+    </declare-styleable>
 </resources>
