搜索页面列表完成，热词未完成

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,7 +67,7 @@
     <color name="color_32caba">#32caba</color>
     <color name="color_ccf3f9">#ccf3f9</color>
     <color name="color_ff6600">#FF6600</color>
-    <color name="color_cc3366">#CC3366</color>
+    <color name="color_5000">#5000</color>
     <color name="color_bbbbbb">#bbbbbb</color>
     <color name="color_EDEEF0">#EDEEF0</color>
     <color name="color_CCF3F9">#CCF3F9</color>
