--- a/app/src/main/res/layout/recycle_item_home_content.xml
+++ b/app/src/main/res/layout/recycle_item_home_content.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_cover_feed"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="240dp"
         android:scaleType="centerCrop"
         android:src="@drawable/placeholder_banner"/>
 
