--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
             android:id="@+id/gsy_player"
@@ -17,10 +16,24 @@
             android:layout_height="250dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <ImageView
+            android:id="@+id/iv_list_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/gsy_player"/>
+
+        <!--暗色遮罩层-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/gsy_player"
+            android:background="@color/color_light_black"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rlv_video_detail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_below="@+id/gsy_player"/>
+    </RelativeLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
