--- a/app/src/main/res/layout/recycle_item_attention.xml
+++ b/app/src/main/res/layout/recycle_item_attention.xml
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:paddingStart="@dimen/padding_common_h"/>
+        android:layout_marginStart="@dimen/padding_common_h"/>
 
 
 </LinearLayout>
