--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rlv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                tools:listitem="@layout/recycle_item_home_content"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
