分类详情页面xml搭建，还未完成

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <!--解决9.0限制http明文传输-->
-    <base-config cleartextTrafficPermitted="true" />
+    <!--debug包使用，release 请关闭此配置 ！！！解决9.0限制http明文传输-->
+    <base-config cleartextTrafficPermitted="true">
+        <trust-anchors>
+            <certificates src="system"/>
+            <certificates src="user"/>
+        </trust-anchors>
+    </base-config>
 </network-security-config>
