--- a/app/src/main/res/layout/recycle_item_grid_classify.xml
+++ b/app/src/main/res/layout/recycle_item_grid_classify.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
@@ -13,14 +13,14 @@
     <ImageView
         android:id="@+id/iv_classify"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         tools:src="@drawable/shape_classify_card_bg"/>
 
     <TextView
         android:id="@+id/tv_classify_name"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:background="#3000"
         android:gravity="center"
         android:textColor="@color/color_white"
