--- a/app/src/main/res/layout/activity_classify_detail.xml
+++ b/app/src/main/res/layout/activity_classify_detail.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="260dp">
 
-        <!--- scroll – 想滚动就必须设置这个。
+        <!--- scroll – 想滚动就必须设置这个，并且要在第一位置。
         enterAlways – 实现quick return效果, 当向下移动时，立即显示View（比如Toolbar)。
         exitUntilCollapsed – 向上滚动时收缩View，但可以固定Toolbar一直在上面。
         enterAlwaysCollapsed – 当你的View已经设置minHeight属性又使用此标志时，你的View只能以最小高度进入，只有当滚动视图到达顶部时才扩大到完整高度。
         contentScrim -收缩时 toolbar 的颜色
                   -->
-
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapse_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/color_title_bg"
@@ -28,17 +29,53 @@
                 “parallax”：视差模式，在折叠的时候会有个视差折叠的效果。
                 我们可以在布局中使用属性app:layout_collapseMode=”parallax”来改变。
                    -->
-            <ImageView
+            <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/iv_cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="1.0"/>
+                app:layout_collapseParallaxMultiplier="0.8"
+                app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed"
+                tools:ignore="ContentDescription"/>
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="pin"
+                app:navigationIcon="@drawable/back_white"/>
+
+            <TextView
+                android:id="@+id/tv_category_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/color_white"
+                android:textSize="14sp"
+                tools:text="摄影"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rlv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/colorAccent"
+        android:src="@drawable/ic_action_share"
+        app:borderWidth="0dp"
+        app:elevation="3dp"
+        app:fabSize="auto"
+        app:layout_anchor="@+id/appbar"
+        app:layout_anchorGravity="bottom|end"/>
 </android.support.design.widget.CoordinatorLayout>
