--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,33 @@
         <attr name="borderWidth"/>
         <attr name="rectRoundRadius"/>
     </declare-styleable>
+
+    <style name="TextLinearStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">@dimen/textSize_content</item>
+        <item name="android:textColor">@color/color_9a9a9a</item>
+    </style>
+
+    <style name="TextLinearStyle.Title">
+        <item name="android:textColor">@color/color_black</item>
+        <item name="android:textSize">@dimen/textSize_titleSmall</item>
+    </style>
+
+    <style name="TextLinearStyle.Description">
+        <item name="android:gravity">top</item>
+        <item name="android:lineSpacingExtra">5dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textSize">@dimen/textSize_content</item>
+        <item name="android:singleLine">false</item>
+    </style>
+
+    <style name="TextLinearStyle.Layout">
+        <item name="android:paddingTop">@dimen/padding_common_v</item>
+        <item name="android:paddingBottom">@dimen/padding_common_v</item>
+        <item name="android:paddingLeft">@dimen/padding_common_h</item>
+        <item name="android:paddingRight">@dimen/padding_common_h</item>
+    </style>
 </resources>
