--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="NewApi">
 
     <!-- Base application theme. -->
     <style name="KotlinDemoAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -8,11 +9,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="SplashFullScreen" parent="KotlinDemoAppTheme">
+    <style name="AppFullScreenTheme" parent="KotlinDemoAppTheme">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="SplashTheme" parent="AppFullScreenTheme">
+        <!--        解决刘海屏全屏黑状态栏问题-->
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
     </style>
 
     <style name="TextLinearStyle">
