--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,4 +49,14 @@
         <item name="android:paddingLeft">@dimen/padding_common_h</item>
         <item name="android:paddingRight">@dimen/padding_common_h</item>
     </style>
+
+    <!--    前景 点击水波纹效果-->
+    <style name="RippleStyle">
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <!--    背景 圆形水波点击效果，只针对父view没有设置background才会生效，慎用-->
+    <style name="RippleCircleStyle">
+        <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+    </style>
 </resources>
